<resources>
    <string name="app_name">Recallr</string>
    <string name="add_card">Add Card</string>
    <string name="edit_card">Edit Card</string>
    <string name="delete_card">Delete Card</string>
    <string name="save_card">Save Card</string>
    <string name="add_deck">Add Deck</string>
    <string name="edit_deck">Edit Deck</string>
    <string name="create_deck">Create Deck</string>
    <string name="delete_deck">Delete Deck</string>
    <string name="save_deck">Save Deck</string>
    <string name="deck_name_hint">Deck Name</string>
    <string name="card_front_hint">Front: (Question)</string>
    <string name="card_back_hint">Back: (Answer)</string>
    <string name="deck_title">Deck Title</string>
    <string name="card_count">10 cards</string>
    <string name="study">Study</string>
    <string name="card_added_prompt">New card added!</string>
    <string name="deck_added_prompt">New deck added!</string>
    <string name="deck_updated_prompt">Deck updated!</string>
    <string name="card_updated_prompt">Card updated!</string>
    <string name="invalid_input_prompt">Please write something on front and back of the card.</string>
    <string name="invalid_deck_name">"A valid name is required"</string>
    <string name="deck_name_taken">"This deck name is already taken"</string>
    <string name="deck_detail">"Deck Detail"</string>
    <string name="shuffle">Shuffle</string>
    <string name="start_study">Start Study Session</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="flip">Flip</string>
    <string name="filter">Filter by:</string>
    <string name="filter_all">All</string>
    <string name="filter_known">Known</string>
    <string name="filter_unknown">Unknown</string>

    <string name="study_session_title">Study Session</string>
    <string name="label_question">Question</string>
    <string name="label_answer">Answer</string>
    <string name="hint_swipe_right">Swipe Right\nfor Previous</string>
    <string name="hint_swipe_left">Swipe Left\nfor Next</string>
    <string name="hint_tap_to_flip">Tap to Flip</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_flip">Flip</string>
    <string name="btn_next">Next</string>
</resources>